Made changes and downgraded java to 11.02
A few more internal API I exported from here
https://stackoverflow.com/a/53527897/2448015

And also from this we know, many features of JFoenix will not work beyond java 11.02
https://stackoverflow.com/questions/55889654/illegalaccessexception-for-jfxtextfield-with-java-sdk-12

So just I install Jdk11.02 and it worked ! I don't see any error.